# pytest-tipsi-django

./: .coveragerc  .editorconfig  .gitignore  .projectile  .travis.yml  .yamllint  LICENSE-MIT  Makefile  README.rst  conftest.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: master.yml  pull.yml  test.yml
pytest_tipsi_django/: client_fixtures.py  django_fixtures.py  plugin.py
test_django_plugin/: settings.py  urls.py  wsgi.py
test_django_plugin/app/: apps.py  models.py
test_django_plugin/app/migrations/: 0001_initial.py
test_django_plugin/app/tests/: conftest.py  test_fixture_rollback.py  test_settings.py  test_transactions.py  test_transactions_class.py  test_transactions_shortcuts.py  test_with_bug_reproduction.py  test_with_bug_reproduction2.py
